# CustomQuickchat

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CustomQuickchat.sln  CustomQuickchat.vcxproj  CustomQuickchat.vcxproj~  install.bat
.githooks/: pre-commit
CustomQuickchat/: Commands.cpp  version.h
lib/: .clang-tidy
lib/detours/include/: UEDetours.h
lib/imgui_bm/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_rangeslider.cpp  imgui_searchablecombo.cpp  imgui_widgets.cpp  imguivariouscontrols.cpp
resources/: install_build_deps.ps1
src/: Commands.cpp  CustomQuickchat.h  CustomQuickchat.vcxproj  CustomQuickchat.vcxproj.filters  Events.cpp  Functions.cpp  Instances.cpp  Instances.h  LobbyInfo.cpp  Settings.cpp  SpeechToText.cpp  TextEffects.cpp  main.cpp  pch.cpp
src/core/: ActionHandler.cpp  Instances.cpp  LogGlobal.cpp  LogHandler.cpp  Utils.cpp  WebsocketManager.cpp
src/core/config/: CvarChangeCallbacks.cpp  RegisterCvars.cpp  Settings.cpp
src/core/log/: LogSink.cpp
src/game/: Chat.cpp  ChatManager.cpp  Commands.cpp  Events.cpp  Functions.cpp  GameState.cpp
src/game/engine/: EngineValidator.cpp  GameInstances.cpp  GameState.cpp  MemoryManager.cpp  ObjectProvider.cpp  Reflection.cpp  StringManager.cpp
src/game/input/: InputHandler.cpp  KeyBinds.cpp  KeyHandler.cpp
src/gui/: Base.cpp  NotificationManager.cpp  RangeSlider.cpp  RangeSlider.h  SearchableCombo.cpp  SearchableCombo.h  Settings.cpp  Tools.cpp
src/include/: Events.h  Instances.h  LobbyInfo.h  Macros.h  Structs.h  Utils.h  WebsocketManager.h  main.aaaaah  main.h  pch.h  version.h
src/include/core/: ActionHandler.h  DependencyContainer.h  GameState.h  Input.h  LogHandler.h  Settings.h
src/include/core/config/: Config.h  Cvars.h  Settings.h
src/include/core/log/: LogGlobal.h  LogHandler.h  LogSink.h  LogTypes.h
src/include/core/log/sink/: Console.h  Debug.h  File.h
src/include/game/: ChatManager.h  GameState.h  Instances.h  LobbyInfo.h  Macros.h
src/include/game/engine/: EngineValidator.h  GameInstances.h  MemoryManager.h  ObjectProvider.h  StaticClassFinder.h  StringManager.h
src/include/game/input/: CommandHandler.h  InputHandler.h  InputManager.h  KeyBinds.h
src/include/gui/: Base.h  NotificationManager.h  Tools.h
src/include/net/: SpeechToText.h  WebsocketManager.h
src/include/types/: GameStructs.h  Structs.h
src/include/util/: FileUtils.h  Utils.h  Variations.h
src/include/util/file/: FileUtils.h
src/include/util/string/: StringUtil.h  TextEffects.h  Variations.h
src/net/: SpeechToText.cpp  WebsocketManager.cpp
src/settings/: CvarChangeCallbacks.cpp  RegisterCvars.cpp  Settings.cpp
src/types/: GameStructs.h  Keys.h  Structs.h
src/util/: FileUtils.cpp  StringUtils.cpp  TextEffects.cpp  Utils.cpp  Variations.cpp
